# Devs_Agents_Fr_Practices

./: README.md  main.py  pyproject.toml
crew_ai/agent_coder/: README.md  pyproject.toml
crew_ai/agent_coder/src/agent_coder/config/: agents.yaml  tasks.yaml
crew_ai/debater/output/: decide.md  oppose.md  propose.md
crew_ai/debater/src/debater/: crew.py  main.py
crew_ai/debater/src/debater/config/: agents.yaml
crew_ai/engineering_team/src/engineering_team/config/: agents.yaml
crew_ai/financial_researcher/: pyproject.toml
crew_ai/financial_researcher/src/financial_researcher/: crew.py
crew_ai/financial_researcher/src/financial_researcher/config/: agents.yaml
crew_ai/stock_pricer/output/: trending_companies.json
crew_ai/stock_pricer/src/stock_pricer/: crew.py
crew_ai/stock_pricer/src/stock_pricer/config/: agents.yaml
foundations/bot_about_me/: README.md  app.py  chat_bot.ipynb
foundations/bot_about_me/me/: summary.txt
langgraph/: lab_langgraph.ipynb  memory.db-shm  memory.db-wal
openai_sdk/: lab_sales_agents.ipynb
