[project]
name = "agent_coder"
version = "0.1.0"
description = "agent_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
agent_coder = "agent_coder.main:run"
run_crew = "agent_coder.main:run"
train = "agent_coder.main:train"
replay = "agent_coder.main:replay"
test = "agent_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
